--- a/Components/Pages/Settings.razor
+++ b/Components/Pages/Settings.razor
@@ -12,6 +12,28 @@
 <h1>Settings</h1>
 
 <div class="mb-3 row align-items-center">
+    <label class="col-form-label col-2">Settings Folder:</label>
+    <div class="col-7 d-flex">
+        <input class="form-control " value="@SettingsFilePath" readonly disabled/>
+    </div>
+    <div class="col-2 d-flex gap-1">
+        <button title="Open Folder" type="button" class="btn btn-secondary"
+                @onclick="() => OpenFolder(SettingsFolderPath)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-folder2-open" viewBox="0 0 16 16">
+                <path d="M1 3.5A1.5 1.5 0 0 1 2.5 2h2.764c.958 0 1.76.56 2.311 1.184C7.985 3.648 8.48 4 9 4h4.5A1.5 1.5 0 0 1 15 5.5v.64c.57.265.94.876.856 1.546l-.64 5.124A2.5 2.5 0 0 1 12.733 15H3.266a2.5 2.5 0 0 1-2.481-2.19l-.64-5.124A1.5 1.5 0 0 1 1 6.14zM2 6h12v-.5a.5.5 0 0 0-.5-.5H9c-.964 0-1.71-.629-2.174-1.154C6.374 3.334 5.82 3 5.264 3H2.5a.5.5 0 0 0-.5.5zm-.367 1a.5.5 0 0 0-.496.562l.64 5.124A1.5 1.5 0 0 0 3.266 14h9.468a1.5 1.5 0 0 0 1.489-1.314l.64-5.124A.5.5 0 0 0 14.367 7z" />
+            </svg>
+        </button>
+        <button title="Open File" type="button" class="btn btn-secondary" @onclick="() => OpenFile(SettingsFilePath)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-file-earmark-text" viewBox="0 0 16 16">
+                <path d="M5 7a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5A.5.5 0 0 1 5 7zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5A.5.5 0 0 1 5 9zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z" />
+                <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3-.5a.5.5 0 0 1-.5-.5V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4h-2.5a.5.5 0 0 1-.5-.5z" />
+            </svg>
+        </button>
+    </div>
+</div>
+<div class="mb-3 row align-items-center">
     <label class="col-form-label col-2">User Data File Location:</label>
     <div class="col-7 d-flex">
         <input class="form-control" value="@OrderDataFilePath" @onchange="OnOrderDataFilePathChanged" />
@@ -71,6 +93,10 @@
         get => AppSettingsService.Settings.DarkMode;
         set => AppSettingsService.Settings.DarkMode = value;
     }
+
+    private string SettingsFilePath => AppSettingsService.Settings.SettingsFilePath;
+    private string SettingsFolderPath => Path.GetDirectoryName(SettingsFilePath) ?? string.Empty;
+
     private string? Message;
 
     protected override async Task OnInitializedAsync()
