--- a/Components/Pages/Settings.razor
+++ b/Components/Pages/Settings.razor
@@ -115,8 +115,8 @@
             <option value="5">ddd (all caps)</option>
             <option value="6">dddd - MMMM (Thursday - October)</option>
             <option value="7">dddd, yyyy (Thursday, 2025)</option>
-            <option value="8">dddd • MMM d (Thursday • Oct 5)</option>
-            <option value="9">ddd • d (Thu • 5)</option>
+            <option value="8">dddd ï¿½ MMM d (Thursday ï¿½ Oct 5)</option>
+            <option value="9">ddd ï¿½ d (Thu ï¿½ 5)</option>
         </select>
     </div>
 </div>
