--- a/Components/Pages/Settings.razor
+++ b/Components/Pages/Settings.razor
@@ -56,7 +56,7 @@
     </div>
 </div>
 
-<h2 class="mt-4">Home page clock / day / date</h2>
+<h2 class="mt-4">Home page</h2>
 
 <div class="mb-3 row align-items-center">
     <label class="col-form-label col-2">Clock:</label>
